<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloLogin_string"
        android:id="@+id/tituloLogin_textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLogin_textView"
        android:id="@+id/loginLogin_textView"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailLogin_editText"
        android:layout_gravity="left"
        android:hint="@string/emailLogin_string"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senhaLogin_editText"
        android:hint="@string/senhaLogin_string"
        android:layout_gravity="left"
        android:layout_marginLeft="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginbuttonLogin_string"
        android:id="@+id/loginLogin_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarbuttonLogin_string"
        android:id="@+id/registrarLogin_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>